--- a/pinout.html
+++ b/pinout.html
@@ -64,7 +64,13 @@
 		"MC6809w": [
 			"GND","/NMI","/IRQ","/FIRQ","BS","BA","Vcc","A0","A1","A2","A3","A4","A5","A6","A7","A8","A9","A10","A11","A12",
 			"A13","A14","A15","D7","D6","D5","D4","D3","D2","D1","D0","R/W","/DMA/BREQ","E","Q","MRDY","/RES","EXTAL","XTAL","/HALT"
-		]
+		],
+		"Z80w": [
+			"A11","A12","A13","A14","A15","CLK","D4","D3","D5","D6","Vcc","D2","D7","D0","D1","/INT","/NMI","/HALT","/MREQ",
+			"/IORQ",
+			"/RD","/WR","/BUSAK","/WAIT","/BUSRQ","/RESET","/M1","/RFSH","GND",
+			"A0","A1","A2","A3","A4","A5","A6","A7","A8","A9","A10"
+		],
 
 	}
 
