--- a/pinout.html
+++ b/pinout.html
@@ -12,7 +12,7 @@
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 </head>
 <body>
-	<h1>OMEN - Pinout generator for parts</h1>
+	<h1>OMEN - Pinout generator for ICs</h1>
 	<select>
 	</select> Click a drawing to download SVG
 	<hr>
