--- a/404.html
+++ b/404.html
@@ -1,2 +1,28 @@
 <!doctype html>
-<html><head><script>console.log(window.location)</script>
+<html><head><script>
+var redir = {
+ "home":"https://www.osmibity.cz/",
+ "zvuk":"http://www.fffilm.name/2012/02/hudebnim-skladatelem-snadno-rychle.html",
+ "mon85":"https://raw.githubusercontent.com/osmibity/alpha/master/docs/mon85.txt",
+ "65src":"http://www.6502.org/source/",
+ "65c02":"http://6502.org/tutorials/65c02opcodes.html",
+ "mag85":"http://saundby.com/electronics/8085/",
+ "eeprog":"http://danceswithferrets.org/geekblog/?page_id=903",
+ "8080js":"https://github.com/maly/8080js",
+ "pinout":"https://8bt.github.io/pinout.html",
+  "z80":"https://hackaday.io/project/19000-a-4-4ics-z80-homemade-computer-on-breadboard",
+ "c2ebay":"https://www.ebay.com/sch/items/?_nkw=EP2C5T144+Board&_sacat=12576&_ex_kw=&_mPrRngCbx=1&_udlo=&_udhi=&_sop=12&_fpos=&_fspt=1&_sadis=&LH_CAds=",
+ "c2ali":"http://s.click.aliexpress.com/e/c0pEMXUU",
+ "x6ebay":"https://rover.ebay.com/rover/1/711-53200-19255-0/1?ff3=4&toolid=11800&pub=5575085282&campid=5338698743&mpre=https%3A%2F%2Fwww.ebay.com%2Fitm%2FXilinx-Spartan6-FPGA-Development-Board-kit-Spartan-6-XC6SLX9-w-USB-RS232-RS485%2F323882227680%3Fhash%3Ditem4b68e297e0%3Ag%3AZHcAAOSwAOVdTiov",
+ "x6ali":"http://s.click.aliexpress.com/e/_dTOFpWt",
+ "c10ebay":"https://rover.ebay.com/rover/1/711-53200-19255-0/1?ff3=4&toolid=11800&pub=5575085282&campid=5338698743&mpre=https%3A%2F%2Fwww.ebay.com%2Fitm%2FIntel-Altera-Cyclone-10-10CL006YU256C8G-FPGA-SDRAM-256Mbit-development-board%2F264375910991%3Fhash%3Ditem3d8e08424f%3Ag%3As1kAAOSwjuFbnrYt",
+ "c10ali":"http://s.click.aliexpress.com/e/_d72MWBr",
+ "eepw":"https://github.com/omenmicro/alpha/blob/master/sw/EEPROM%20write/eeprom.a80"
+}
+
+var pn = window.location.pathname.substr(1)
+if (redir[pn]) {
+	document.location.href = redir[pn]
+} else {
+	document.location.href = "https://osmibity.cz"
+}</script>
